# the_rusty_duke

./: .gitignore  Cargo.toml
src/: main.rs  token.rs  units.rs
src/common/: board.rs  coordinate.rs  coordinates.rs  geometry.rs  mod.rs  percentage.rs  tests.rs  timer.rs  utils.rs
src/game/: bag.rs  board.rs  board_setup.rs  dumb_printer.rs  mod.rs  offset.rs  state.rs  tile.rs  tile_side.rs  token.rs  units.rs
src/game/ai/: ai_move.rs  alpha_beta.rs  alpha_beta_min_max.rs  heuristic_ai.rs  heuristics.rs  manual_simulator.rs  minimax.rs  mod.rs  my_negamax.rs  player.rs  stupid_sync_ai.rs  test.rs  utils.rs
src/game/ai/mcts/: mod.rs  player.rs  tree.rs
src/game/board/: board_game.rs
src/view/: controller.rs  dumb_printer.rs  mod.rs  move_view.rs  state.rs
src/view/tui/: bag_renderer.rs  board_renderer.rs  main.rs  mod.rs  move_view.rs  renders.rs  state_renderer.rs  tile_renderer.rs
