[package]
name = "duke_rust"
version = "0.1.0"
edition = "2018"

[dependencies]
fstrings = "*"
rand = "*"
paste = "*"
strum = "*"
strum_macros = "*"

log = "*"

minimax-alpha-beta = "*"
minimax = "*"

crossterm = "*"
tui = { version = "*", default-features = false, features = ['crossterm'] }

[profile.release]
debug = true
